# Screen-Translate

./: .gitignore  LICENSE  MANIFEST.in  Main.py  README.md  Run.py  ScreenTranslate.py  ScreenTranslate.spec  ScreenTranslate_Console.spec  ScreenTranslate_NoConsole.spec  TempRun.bat  build.spec  build_Noconsole.spec  build_cx.py  build_pyinstaller.py  build_with_console.spec  changelog.txt  installer_example.iss  pyproject.toml  readme.md  requirements.txt  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: codeql.yml
ScreenTranslate/: kiwisolver.cp39-win_amd64.pyd
ScreenTranslate/altgraph-0.17.dist-info/: RECORD
ScreenTranslate/matplotlib/: _c_internal_utils.cp39-win_amd64.pyd  _image.cp39-win_amd64.pyd  _qhull.cp39-win_amd64.pyd
Source_Code/: ScreenTranslate.py  ScreenTranslate.spec  TempRun.bat
Source_Code/resource/: LangCode.py
_pyinstaller_hooks/: add_lib.py
copy_after_compiling/: @@Changelog.txt  @@Readme.txt  ReadBeforeCopy.txt  Readme.txt
copy_after_compiling/user_manual/: readme.txt
img_captured/: readme.txt
json/: Readme.txt  Setting.json
log/: Readme.txt
requirements/: default.txt  dev.txt
resource/: Capture.py  Capture_screen.py  CekFont.py  JsonHandling.py  Main.py  Main_Menu.py  Mbox.py  readme.txt
resource/backend/: Capture.py  JsonHandling.py  (+4 more)
screen_translate/: Capture.py  Globals.py  JsonHandling.py  LangCode.py  Logging.py  Mbox.py  Public.py  Translate.py  Translate_Deepl.py  _constants.py  _globals.py  _logging.py  _path.py  _version.py
src/: Capture.py  JsonHandling.py  LangCode.py
sv_ttk/: __init__.py  sv.tcl
test/: qt_snip_multimonitor.py
tools/: build.py  generate_requirements.py  installer.iss  update_version.py
ts_ttk/: __init__.py  readme.txt
user_manual/: Changelog.txt  Test Doc.docx  readme.txt  ~$st Doc.docx
(+101 files in other folders)
